fixed operator box overflow

--- a/splod_style.css
+++ b/splod_style.css
@@ -386,6 +386,7 @@ div#operatorsBox{
 }
 
 div#contentOperatorBox{
+	overflow: auto;
     height: 300px;
  }
 
